Fix logo too big.

--- a/css/general.css
+++ b/css/general.css
@@ -44,7 +44,7 @@ nav a.logo {
   position: absolute;
   display: block;
   width: 100px;
-  height: 80px;
+  height: 59px;
   background: url(../images/logo.png) no-repeat 0 0;
   top: 10px;
   left: 5px;
